
Bug Fixes:
 - Fixed a game-breaking bug that I could have sworn was already fixed where you could push a boulder in Laeryidyean's Forest - Left Connector off the boulder tiles.
 - Fixed an old, and I mean OLD, bug where states intended to be removed by walking would occasionally never expire.
 - Fixed an ancient bug that caused battle events to trigger during actions. Endings of boss battles will now flow much more smoothly.
 - Fixed a ridiculously old bug that has existed since Alpha 12 where items reset using the Cleansing Scroll wouldn't save.
 - Fixed several bugs with many states such as inconsistencies between regeneration effects, poison map damage not functioning as intended, and unused states doubling the effects of some traits.
 - Fixed a bug where conditional drops did not work correctly (e.g. night boosted enemies did not properly increase their item drop rate).
 - Fixed a bug where the critical hit formula wasn't programmed correctly, making critical evasion basically useless.
 - Fixed a bug where elemental normal attacks wouldn't remove weak elemental states.
 - Fixed a bug where the loot explosion after defeating an enemy sometimes did not show the correct drops.
 - Fixed a bug where party members would rarely not gain BP between the 1st and 2nd turn of a battle.
 - Fixed a bug where Purify couldn't be used outside of battle.
 - Fixed a bug where retrying a battle would cause items from previous attempts to show up on the dropped item window at the end of battle. This was only a visual bug.
 - Fixed a bug where the Suffering Soul had only 25% physical element damage reduction rather than the intended 50%.
 - Fixed a bug where the Map Quest Window would disappear while the event interpreter was running.
 - Fixed a bug where Brawl Brew and Warding Swig would not bypass death removal.
 - Fixed a bug where On Fire!'s damage at the end of every turn was half of the intended value.