@@ -379,7 +379,7 @@
       "type": 3,
       "variance": 5
     },
-    "description": "A minor healing spell. Restores a small bit of HP to one of\nyour allies, even out of battle. \\c[27]\\bpdamage[120]%\\c[0] MAT rate.",
+    "description": "Restores a small bit of HP to one of your allies, even out of\nbattle. Doesn't work on \\it[1] party members. \\c[27]\\bpdamage[120]%\\c[0] MAT rate.",
     "effects": [],
     "hitType": 0,
     "iconIndex": 1441,
